--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,17 @@
 body {
   font-family: Poppins, sans-serif;
   margin: 0;
-  font-size: 1.1em;
+  /* font-size: 1.1em; */
+  display: flex;
+  flex-direction: row;
+  /* align-items: center; */
+  justify-content: center;
 }
-ul, li, p, h1, h2, h3, h4 {
+li, p, h1, h2, h3, h4 {
   margin: 0;
-  padding: 0;
-}
-ul {
   list-style-type: none;
 }
+
 .btn {
   background: none;
   border: 2px solid #1f9751;
